# Handy

./: .gitignore  README.md  build-client-app.sh  package.json  start-client-mode.sh
app/Footy.app/Contents/: Info.plist
app/Footy.app/Contents/_CodeSignature/: CodeResources
app/Handy.app/Contents/_CodeSignature/: CodeResources
src/: bindings.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/cli-placeholder/: index.html
src-tauri/src/: actions.rs  cli.rs  headless_cli.rs  lib.rs  settings.rs  transcription_lib.rs
src-tauri/src/managers/: transcription.rs
src-tauri/src/shortcut/: mod.rs
src/components/icons/: HandyTextLogo.tsx
src/components/onboarding/: AccessibilityOnboarding.tsx
src/components/settings/about/: AboutSettings.tsx
src/components/settings/general/: ClientModeSettings.tsx  GeneralSettings.tsx  ModelSettingsCard.tsx
src/i18n/locales/en/: translation.json
src/i18n/locales/zh/: translation.json
src/stores/: settingsStore.ts
transcribe-lib/: Cargo.toml
transcribe-lib/src/: lib.rs
